# kb-search

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt  search.py
kb/: searcher.py
tests/: test_check.py  test_searcher.py  test_setup.py
