[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-search"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["click==8.1.7"]

[project.scripts]
kb-search = "search:cli"

[tool.setuptools]
py-modules = ["search"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kb*"]
